--- a/package.json
+++ b/package.json
@@ -15,11 +15,22 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.32.0",
     "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
+    "jiti": "^2.5.1",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.38.0",
     "vite": "^6.3.5",
+    "vite-plugin-eslint": "^1.8.1",
+    "eslint-plugin-vue": "^9.33.0",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.8"
   }
 }
