--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "lint:format": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,vue,html,md}\""
   },
   "dependencies": {
-    "pinia": "^3.0.3",
+    "axios": "^1.11.0",
+    "dayjs": "^1.11.13",
+    "lodash-es": "^4.17.21",
+    "qs": "^6.14.0",
     "vite-plugin-qiankun": "^1.0.15",
     "vue": "^3.5.13",
+    "vue-i18n": "^11.1.11",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
@@ -21,17 +25,20 @@
     "@types/node": "^24.1.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "element-plus": "2.9.2",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-vue": "^9.33.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1",
-    "eslint-plugin-vue": "^9.33.0",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.8"
   }
