--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^9.33.0",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "mockjs": "^1.1.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "prettier": "^3.6.2",
@@ -39,6 +40,7 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-mock": "^3.0.2",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.8"
   }
