--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^5.0.0",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "@zxcvbn-ts/core": "^3.0.4",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "lodash-es": "^4.17.21",
@@ -28,6 +31,7 @@
     "vue": "^3.5.13",
     "vue-draggable-plus": "^0.6.0",
     "vue-i18n": "^11.1.11",
+    "vue-json-pretty": "^2.5.0",
     "vue-router": "^4.5.1",
     "vue-types": "^6.0.0",
     "xgplayer": "^3.0.22"
@@ -37,11 +41,16 @@
     "@iconify/json": "^2.2.364",
     "@intlify/unplugin-vue-i18n": "^6.0.8",
     "@types/node": "^24.1.0",
+    "@unocss/preset-attributify": "^66.4.1",
+    "@unocss/preset-icons": "^66.4.1",
+    "@unocss/preset-uno": "^66.4.1",
+    "@unocss/transformer-variant-group": "^66.4.1",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitejs/plugin-vue-jsx": "^5.0.1",
     "@vue/tsconfig": "^0.7.0",
     "@vueuse/core": "^13.6.0",
     "chalk": "^5.4.1",
+    "consola": "^3.4.2",
     "element-plus": "2.10.4",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
@@ -59,12 +68,15 @@
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.38.0",
+    "unocss": "^66.4.1",
     "vite": "^6.3.5",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-purge-icons": "^0.10.0",
+    "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.8"
-  }
+  },
+  "packageManager": "pnpm@9.15.3"
 }
