--- a/.env.base
+++ b/.env.base
@@ -14,7 +14,7 @@ VITE_APP_TITLE=ElementAdmin
 VITE_USE_ALL_ELEMENT_PLUS_STYLE=true
 
 # 是否开启mock
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 
 # 是否使用在线图标
 VITE_USE_ONLINE_ICON=true
